[gd_scene load_steps=7 format=3 uid="uid://c2k2ofs6xr5sr"]

[ext_resource type="Theme" uid="uid://85byrm5eq3ab" path="res://theme/theme.tres" id="1_5m4j7"]
[ext_resource type="Script" path="res://pages/login/login.gd" id="2_o1b0i"]
[ext_resource type="PackedScene" uid="uid://cigqt0kjqfuw2" path="res://pages/login/saves_list_item.tscn" id="3_4ywes"]
[ext_resource type="PackedScene" uid="uid://bnywbmg2uuj8j" path="res://common/interface/window_margin.tscn" id="4_a50hp"]
[ext_resource type="Texture2D" uid="uid://cxwmdeeodd6ox" path="res://theme/return_button.png" id="5_sbtst"]
[ext_resource type="Texture2D" uid="uid://cblsatyv1ncqc" path="res://theme/return_button_pressed.png" id="6_5hfl4"]

[node name="Login" type="CanvasLayer"]
script = ExtResource("2_o1b0i")
SavesListItemScene = ExtResource("3_4ywes")

[node name="Theme" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5m4j7")

[node name="WindowMargin" parent="Theme" instance=ExtResource("4_a50hp")]
layout_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Theme/WindowMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="Theme/WindowMargin/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/WindowMargin/CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="MarginContainer" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Header"]
layout_mode = 2
text = "Saves"
horizontal_alignment = 1

[node name="RefreshButton" type="Button" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"ButtonInPanel"
text = "Refresh"

[node name="Control" type="Control" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="SavesList" type="VBoxContainer" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SavesListItem" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Control/SavesList" instance=ExtResource("3_4ywes")]
layout_mode = 2

[node name="SavesListItem2" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Control/SavesList" instance=ExtResource("3_4ywes")]
layout_mode = 2

[node name="SavesListItem3" parent="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Control/SavesList" instance=ExtResource("3_4ywes")]
layout_mode = 2

[node name="ReturnButton" type="TextureButton" parent="Theme/WindowMargin"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("6_5hfl4")
texture_pressed = ExtResource("5_sbtst")
texture_hover = ExtResource("5_sbtst")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="Theme/WindowMargin/CenterContainer/Panel/VBoxContainer/Header/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="Theme/WindowMargin/ReturnButton" to="." method="_on_return_button_pressed"]
